k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-keycloack
  namespace: app
spec:
  selector:
    app: login-keycloack
  ports:
  - port: 9090
    targetPort: 9090
