k8s/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: login-keycloack
  namespace: app
spec:
  to:
    kind: Service
    name: login-keycloack
  port:
    targetPort: 9090
  tls:
    termination: edge
